# Velyrion

./: .env.example  .gitignore  README.md  VELYRION_Deployment_Guide.docx  VELYRION_Deployment_Guide.md  VELYRION_Operations_Guide.docx  VELYRION_Operations_Guide.md  docker-compose.yml  railway.json  start.py
.github/workflows/: ci.yml
agents/: README.md  run_all.py  run_full_verification.py
agents/L1_basic/: agent.py
agents/L2_medium/: agent.py
agents/L3_advanced/: agent.py
agents/L4_adversarial/: agent.py
agents/L5_multi/: agent.py
agents/ollama/: base.py  enterprise_1_support.py  enterprise_2_analyst.py  enterprise_3_security.py  enterprise_4_compliance.py  enterprise_5_devops.py  run_enterprise.py
agents/sdk/: __init__.py  velyrion_sdk.py
backend/: .env.example  Dockerfile  agents.py  auth.py  build.sh  database.py  live_agent_sim.py  main.py  models.py  requirements.txt  schemas.py  seed.py  simulate.py  stress_test_agents.py  ws_manager.py
backend/engines/: alert_engine.py  anomaly_engine.py  crypto_chain.py  incident_engine.py  permission_engine.py  risk_predictor.py
backend/routers/: agents.py  alerts.py  anomalies.py  approvals.py  audit_proof.py  auth.py  behavioral_dna.py  controls.py  copilot.py  dashboard.py  events.py  governance_score.py  graph.py  incidents.py  insurance_scoring.py  multi_agent.py  policies.py  predictions.py  regulatory.py  replay.py  reports.py  sandbox.py  threat_intel.py  trust_mesh.py  trust_registry.py  violations.py  war_room.py  webhooks.py
frontend/: .env.production  Dockerfile  README.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/anomalies/: page.tsx
frontend/src/app/approvals/: page.tsx
frontend/src/app/behavioral-dna/: page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/app/connect/: page.tsx
frontend/src/app/copilot/: page.tsx
frontend/src/app/cost-optimizer/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/events/: page.tsx
frontend/src/app/forensics/: page.tsx
frontend/src/app/governance-score/: page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/heatmap/: page.tsx
frontend/src/app/incidents/: page.tsx
frontend/src/components/: ConditionalLayout.tsx  Sidebar.tsx  ThemeToggle.tsx  ToastProvider.tsx  UserMenu.tsx
frontend/src/lib/: api.ts  auth.tsx
policies/: finance-agents.yaml  soc2-compliance.yaml
sdk/: README.md  pyproject.toml
sdk/velyrion/: __init__.py  cli.py  client.py  decorators.py  policy.py
(+21 files in other folders)
