[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "velyrion"
version = "0.1.0"
description = "AI Agent Governance SDK — Monitor, control, and audit every AI agent action."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "VELYRION", email = "hello@velyrion.com"}]
keywords = ["ai", "agent", "governance", "monitoring", "audit", "llm", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.28.0",
    "websocket-client>=1.5.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]
openai = ["openai>=1.0.0"]
all = ["langchain>=0.1.0", "openai>=1.0.0"]

[project.urls]
Homepage = "https://velyrion.com"
Documentation = "https://velyrion.com/docs"
Repository = "https://github.com/velyrion/velyrion-sdk"
