[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "velyrion"
version = "0.2.0"
description = "AI Agent Governance SDK — Monitor, control, and audit every AI agent action."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "VELYRION", email = "hello@velyrion.com"}]
keywords = ["ai", "agent", "governance", "monitoring", "audit", "llm", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.28.0",
    "websocket-client>=1.5.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]
openai = ["openai>=1.0.0"]
crewai = ["crewai>=0.28.0"]
autogen = ["pyautogen>=0.2.0"]
anthropic = ["anthropic>=0.18.0"]
gemini = ["google-generativeai>=0.5.0"]
mistral = ["mistralai>=0.1.0"]
async = ["httpx>=0.27.0"]
all = ["langchain>=0.1.0", "openai>=1.0.0", "crewai>=0.28.0", "pyautogen>=0.2.0", "anthropic>=0.18.0", "google-generativeai>=0.5.0", "mistralai>=0.1.0", "httpx>=0.27.0"]

[project.scripts]
velyrion = "velyrion.cli:main"

[project.urls]
Homepage = "https://velyrion.com"
Documentation = "https://velyrion.com/docs"
Repository = "https://github.com/Velyrion-dev/Velyrion"
